

0.15.3 ---
- Action recorder refactoring
- Optional midimap parameters (thank you @tomek-szczesny)
- Support for "inaudible" MIDI lightning events (thank you @tomek-szczesny)
- Build AppImage for Linux on Travis CI instance
- Huge optimization of the AppImage binary file
- Fix Action Editor repaint on min/max zoom levels
- "Resize recording" flag has been removed
- Smarter column assignment while loading a patch/project
- Fix wrong resizer bar width between Action Editor widgets when zooming


0.15.2 --- 2018 . 09 . 05
- New sample-accurate Action Editor
- New MIDI Velocity Editor widget
- Ability to move MIDI events vertically in piano roll (i.e. change note) 
- Remove mute action recording
- Better handling of MIDI devices that send NOTEON + velocity 0 as NOTEOFF
- Avoid calls to deprecated JUCE plug-ins methods
- Removed useless pthreadGC2.dll from Windows package
- Can't kill MIDI channels (fix #197)
- Can't record MIDI actions (fix #202)
- Fix missing first beat on metronome rendering
- Fix crash on opening plug-in window on macOS


0.15.1 --- 2018 . 07 . 03
- Deep code refactoring, featuring Channels processors
- Many new unit tests added
- Simplify mutex mechanism
- Fix wrong quantizer value on patch/project load
- Remove the old, buggy and glitchy internal crossfade algorithm
- Fix many potential plug-in crashes on Linux
- Properly close plug-in window on plug-in removal 
- Improve BPM changes while running as JACK client


0.15.0 --- 2018 . 04 . 18
- Refactor audio engine into frame-based processing
- Refactor channels readers/writers into channelManager namespace
- Smarter Solo algorithm
- Fix missing .wav extension on recorded audio takes
- Fix wrong Channel status update after 'Clear all actions'


0.14.6 --- 2018 . 03 . 15
- MIDI velocity drives volume for one-shot sample channels
- FLAC and Ogg support
- Ability to use system-provided Catch library (GitHub #151)
- Update Catch to version 2